--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,11 @@
   font-size: large;
 }
 
+.Username {
+  margin: 15px;
+  width: 30%;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
